# basis_universal

./: CMakeLists.txt  README.md  basisu_tool.cpp
cmake/: basisu-config.cmake.in  onetbb-provider.cmake  opencl-provider.cmake  tbb.patch  zstd-provider.cmake
contrib/previewers/lib/: basisu_transcoder.cpp
encoder/: CMakeLists.txt  basisu_astc_hdr_enc.cpp  basisu_astc_hdr_enc.h  basisu_backend.h  basisu_basis_file.cpp  basisu_basis_file.h  basisu_bc7enc.h  basisu_comp.cpp  basisu_comp.h  basisu_enc.cpp  basisu_enc.h  basisu_etc.h  basisu_frontend.cpp  basisu_frontend.h  basisu_gpu_texture.h  basisu_opencl.h  basisu_resampler.h  basisu_resampler_filters.h  basisu_uastc_enc.cpp  basisu_uastc_enc.h  pvpngreader.cpp
example/: CMakeLists.txt  example.cpp
transcoder/: CMakeLists.txt  basisu_containers.h
webgl/transcoder/: basis_wrappers.cpp
